--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,21 @@
             <artifactId>guice</artifactId>
             <version>3.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>de.flapdoodle.embed</groupId>
+            <artifactId>de.flapdoodle.embed.mongo</artifactId>
+            <version>1.36</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>2.11.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.jmkgreen.morphia</groupId>
+            <artifactId>morphia</artifactId>
+            <version>1.2.3</version>
+        </dependency>
     </dependencies>
     <build>
         <!--<defaultGoal>compile</defaultGoal>-->
